# onerut

./: .gitignore  CMakeLists.txt  INFO.txt  build_external_packages.sh  example_2d-fm-ising_mf-on-cross.onerut  example_2d-fm-ising_mf-on-site-brillouin.onerut  example_2d-fm-ising_mf-on-site.onerut  example_declarative.onerut  example_eg.onerut  example_four_spins.onerut  example_hoffman.onerut  example_oscillator.onerut  example_oscillator_sparse.onerut  example_oscillator_thermal.onerut  example_spin_operator.onerut  example_two_spins.onerut  script_1.onerut  script_2.onerut
build_debug/: DIR_README
build_release/: DIR_README
esc/: CMakeLists.txt
esc/include/esc/: esc_codes.hpp  esc_manip.hpp
esc/src/: esc_codes.cpp  esc_manip.cpp  esc_manip_examples.cpp
examples/: basic_declarative.onerut  basic_fock.onerut  basic_oscillator.onerut  basic_scalars_1.onerut  basic_scalars_2.onerut  basic_spins.onerut  declarative.onerut  heat.py  hoffman.onerut  hubbard_for_h2.onerut  ising-2d-fm_mf-on-cross.onerut  ising-2d-fm_mf-on-plaquette.onerut  ising-2d-fm_mf-on-site.onerut  manybody_four_spins.onerut  manybody_two_spins.onerut  oscillator_displaced.onerut
log_utils/: CMakeLists.txt
log_utils/src/: fancy_log_mat.cpp  fancy_to_visible_size.cpp
nbproject/: configurations.xml  project.properties  project.xml
onerut/: CMakeLists.txt
onerut/include/onerut/: aka.hpp  ast_x3.hpp  execute_lines.hpp  execute_script.hpp  grep_ast_asset.hpp  grep_ref_container.hpp  line_execute.hpp  line_preprocess.hpp  line_preprocessor.hpp  line_processor.hpp  parser.hpp  presenter.hpp  presenter_dependable.hpp  program_options.hpp  utility_ast_asset_dfs.hpp  utility_ptr_map.hpp  utility_ptr_transparent_comparator.hpp
onerut/src/: aka.cpp  ast_x3.cpp  execute_lines.cpp  execute_script.cpp  line_execute.cpp  line_preprocess.cpp  line_preprocessor.cpp  line_processor.cpp  p1.cpp  parser.cpp  program_options.cpp
onerut_convergence_parameter/: CMakeLists.txt
onerut_convergence_parameter/src/: convergence_parameter.cpp
onerut_dependence/src/: dependence_dfs.cpp
onerut_env/: CMakeLists.txt
onerut_env/src/: env.cpp
onerut_normal_operator/: CMakeLists.txt
onerut_normal_operator/src/: calculate_mean.cpp  diagonalizator.cpp  domain_abstract.cpp  domain_custom.cpp  domain_eg.cpp  domain_fock.cpp  domain_kron.cpp  domain_oscillator.cpp  domain_spin.cpp  eig.cpp  mean.cpp  normal_operator.cpp  operator_abstract.cpp  operator_dense.cpp  operator_eg.cpp  operator_fock.cpp  operator_kron.cpp  operator_opplusminus.cpp  operator_opprod.cpp  operator_opunaryplusminus.cpp  operator_oscilator.cpp  operator_oscillator.cpp  operator_scalled.cpp  operator_simple.cpp  operator_spin.cpp  operator_zero.cpp  to_mat.cpp  to_string.cpp
onerut_normal_operator_tests/: CMakeLists.txt
onerut_normal_operator_tests/src/: common.cpp  main.cpp  test_domain_custom.cpp  test_domain_kron.cpp  test_eig.cpp  test_mean.cpp  test_operator_kron.cpp  test_operator_opplusminus.cpp  test_operator_opprod.cpp  test_operator_opunaryplusminus.cpp  test_operator_scalled.cpp  test_operator_simple.cpp  test_operator_zero.cpp
onerut_op1e/: CMakeLists.txt
onerut_op1e/src/: op1e.cpp
onerut_operator/src/: to_mat.cpp  to_mat.cpp.cpp
onerut_operator_tests/: CMakeLists.txt
onerut_operator_tests/src/: common.cpp  main.cpp  operator_opplusminus.cpp  operator_opprod.cpp  operator_opunaryplusminus.cpp  operator_scalled.cpp  operator_simple.cpp
onerut_parser/: CMakeLists.txt
onerut_parser/src/: asset.cpp  asset_deref.cpp  asset_error.cpp  asset_receipt.cpp  asset_ref.cpp  asset_ref_container.cpp  asset_to_esc_data.cpp  asset_utility.cpp  asset_utility_concrete.cpp  ast_asset.cpp  ast_asset_to_chart.cpp  ast_compile_result.cpp  ast_compile_result_to_chart.cpp  ast_dyn.cpp  ast_dyn_builder.cpp  ast_dyn_compile.cpp  ast_dyn_run.cpp  ast_dyn_to_chart.cpp  ast_dyn_to_oneliner.cpp  ast_source.cpp  ast_source_compile.cpp  ast_source_to_chart.cpp  ast_source_to_oneliner.cpp  ast_x3.cpp  ast_x3_to_ast_dyn.cpp  ast_x3_to_ast_source.cpp  ast_x3_to_chart.cpp  ast_x3_to_oneliner.cpp  ast_x3_to_string.cpp  build_result.cpp  build_result_to_esc_data.cpp  builder.cpp  compile_result.cpp  compile_result_deref.cpp  compile_result_error.cpp  compile_result_to_esc_data.cpp  compile_result_utility.cpp  compiler_rules.cpp  compiler_rules_concrete.cpp  diag_request.cpp  (+16 more)
onerut_parser_concrete/: CMakeLists.txt
onerut_parser_concrete/include/onerut_parser_concrete/: asset_utility_concrete.hpp  compiler_rules_concrete.hpp  function_factory_constant.hpp  function_factory_container.hpp  function_factory_imperative_request.hpp  function_factory_normal_operators.hpp  function_factory_print_value_request.hpp  function_factory_scalar.hpp
onerut_parser_concrete/src/: asset_receipt.cpp  asset_to_esc_data.cpp  asset_utility_concrete.cpp  compiler_rules_concrete.cpp  function_factory.cpp  function_factory_constant.cpp  function_factory_container.cpp  function_factory_imperative_request.cpp  function_factory_normal_operators.cpp  function_factory_print_value_request.cpp  request_print_value.cpp
onerut_parser_concrete_tests/src/: box_functions.cpp  box_functions_onerut.cpp  source_mix_integer_real.cpp  source_pure_complex.cpp
onerut_parser_exec/: CMakeLists.txt
onerut_parser_exec/src/: asset.cpp  asset_deref.cpp  asset_error.cpp  asset_ref.cpp  asset_ref_container.cpp  asset_utility.cpp  ast_asset.cpp  ast_asset_to_chart.cpp  ast_source.cpp  ast_source_compile.cpp  ast_source_to_chart.cpp  ast_source_to_oneliner.cpp  ast_x3.cpp  ast_x3_to_ast_source.cpp  ast_x3_to_chart.cpp  ast_x3_to_oneliner.cpp  compiler_rules.cpp  (+2 more)
onerut_parser_rules/: CMakeLists.txt
onerut_parser_tests/: CMakeLists.txt
onerut_request/: CMakeLists.txt
onerut_scalar/: CMakeLists.txt
onerut_scalar_tests/: CMakeLists.txt
onerut_typed_operator/: CMakeLists.txt
onerut_typed_operator_tests/: CMakeLists.txt
operator_string_parser/: CMakeLists.txt
operator_string_parser_tests/: CMakeLists.txt
operator_string_parser_tests/src/: main.cpp  parse_XXX_string.cpp  token.cpp
(+273 files in other folders)
